Fixing container padding on mobile devices
Container now extends to the edge of the screen on mobile devices.

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ ul, li {
 /* Container pads the page horizontally for better layout */
 
 .container {
-  width: 95%;
+  width: 100%;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
